--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@fontsource/plus-jakarta-sans": "^5.0.15",
     "@pioneer-sdk/pioneer-react": "^0.0.18",
     "@typescript-eslint/parser": "^6.7.5",
@@ -33,6 +35,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-polyfill-node": "^0.12.0"
   },
   "devDependencies": {
