--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "build": "pnpm type-check && vite build",
     "build:turbo": "npx turbo build",
+    "build:serve": "pnpm build && pnpm serve",
     "serve": "vite preview",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix && pnpm format",
@@ -28,6 +29,7 @@
     "@fontsource/plus-jakarta-sans": "^5.0.15",
     "@pioneer-sdk/pioneer-react": "^0.0.18",
     "@typescript-eslint/parser": "^6.7.5",
+    "buffer": "^6.0.3",
     "framer-motion": "^10.16.4",
     "million": "2.6.4",
     "react": "^18.2.0",
