--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "@pioneer-platform/pioneer-coins": "^8.1.86",
     "@pioneer-platform/swapkit-entities": "^3.0.1",
     "@pioneer-platform/types": "^3.0.1",
-    "@pioneer-sdk/pioneer-react": "^0.0.28",
+    "@pioneer-sdk/pioneer-react": "^0.0.30",
     "@typescript-eslint/parser": "^6.7.5",
     "buffer": "^6.0.3",
+    "events": "^3.3.0",
     "framer-motion": "^10.16.4",
     "million": "2.6.4",
     "react": "^18.2.0",
