temp hosting of sdk in template repo

--- a/package.json
+++ b/package.json
@@ -23,15 +23,34 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
+    "@coinmasters/api": "^2.0.0",
+    "@coinmasters/core": "^2.0.0",
+    "@coinmasters/helpers": "^2.0.0",
+    "@coinmasters/tokens": "^2.0.0",
+    "@coinmasters/toolbox-cosmos": "^2.0.0",
+    "@coinmasters/toolbox-evm": "^2.0.1",
+    "@coinmasters/toolbox-utxo": "^2.0.1",
+    "@coinmasters/types": "^2.0.0",
+    "@coinmasters/wallet-evm-extensions": "^2.0.0",
+    "@coinmasters/wallet-keepkey": "^4.0.0",
+    "@coinmasters/wallet-keplr": "^2.0.0",
+    "@coinmasters/wallet-keystore": "^2.0.0",
+    "@coinmasters/wallet-ledger": "^2.0.0",
+    "@coinmasters/wallet-metamask": "^1.0.0",
+    "@coinmasters/wallet-okx": "^2.0.0",
+    "@coinmasters/wallet-trezor": "^2.0.0",
+    "@coinmasters/wallet-wc": "^2.0.0",
+    "@coinmasters/wallet-xdefi": "^2.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@fontsource/plus-jakarta-sans": "^5.0.15",
+    "@pioneer-platform/pioneer-caip": "^8.1.81",
+    "@pioneer-platform/pioneer-client": "^9.0.19",
     "@pioneer-platform/pioneer-coins": "^8.1.86",
     "@pioneer-platform/swapkit-entities": "^3.0.1",
     "@pioneer-platform/types": "^3.0.1",
-    "@pioneer-sdk/pioneer-react": "^0.0.30",
     "@typescript-eslint/parser": "^6.7.5",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
@@ -43,7 +62,8 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-polyfill-node": "^0.12.0"
+    "rollup-plugin-polyfill-node": "^0.12.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.7.0",
