--- a/package.json
+++ b/package.json
@@ -23,15 +23,23 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
+    "@coinmasters/types": "^4.0.1",
+    "@coinmasters/wallet-keepkey": "^6.0.2",
+    "@coinmasters/wallet-keplr": "^4.0.1",
+    "@coinmasters/wallet-keystore": "^4.0.1",
+    "@coinmasters/wallet-ledger": "^4.0.4",
+    "@coinmasters/wallet-metamask": "^3.0.0",
+    "@coinmasters/wallet-okx": "^4.0.1",
+    "@coinmasters/wallet-trezor": "^4.0.2",
+    "@coinmasters/wallet-wc": "^4.0.5",
+    "@coinmasters/wallet-xdefi": "^4.0.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@fontsource/plus-jakarta-sans": "^5.0.15",
-    "@pioneer-platform/pioneer-coins": "^8.1.86",
-    "@pioneer-platform/swapkit-entities": "^3.0.1",
-    "@pioneer-platform/types": "^3.0.1",
-    "@pioneer-sdk/pioneer-react": "^0.0.30",
+    "@pioneer-platform/pioneer-coins": "^9.0.4",
+    "@pioneer-sdk/pioneer-react": "^0.0.33",
     "@typescript-eslint/parser": "^6.7.5",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
