--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
+    "@coinmasters/helpers": "4.0.1",
+    "@coinmasters/toolbox-cosmos": "4.0.1",
+    "@coinmasters/toolbox-evm": "4.0.1",
+    "@coinmasters/toolbox-utxo": "4.0.1",
     "@coinmasters/types": "^4.0.2",
-    "@coinmasters/wallet-keepkey": "^6.0.2",
+    "@coinmasters/wallet-keepkey": "^6.0.3",
     "@coinmasters/wallet-keplr": "^4.0.1",
     "@coinmasters/wallet-keystore": "^4.0.1",
     "@coinmasters/wallet-ledger": "^4.0.4",
@@ -39,9 +43,10 @@
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@fontsource/plus-jakarta-sans": "^5.0.15",
     "@pioneer-platform/pioneer-coins": "^9.0.4",
-    "@pioneer-sdk/pioneer-react": "^0.0.35",
+    "@pioneer-sdk/pioneer-react": "0.0.35",
     "@typescript-eslint/parser": "^6.7.5",
     "buffer": "^6.0.3",
+    "eslint-plugin-prettier": "4.2.1",
     "events": "^3.3.0",
     "framer-motion": "^10.16.4",
     "million": "2.6.4",
@@ -65,7 +70,7 @@
     "eslint-config-sznm": "^2.0.2",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
+    "prettier": "^2.7.1",
     "standard-version": "^9.5.0",
     "typescript": "5.2.2",
     "vite": "^4.4.11",
