--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
+    "@coinmasters/api": "^3.0.3",
+    "@coinmasters/core": "^4.0.3",
     "@coinmasters/helpers": "4.0.1",
+    "@coinmasters/pioneer-sdk": "^4.0.4",
+    "@coinmasters/tokens": "3.0.1",
     "@coinmasters/toolbox-cosmos": "4.0.1",
     "@coinmasters/toolbox-evm": "4.0.1",
     "@coinmasters/toolbox-utxo": "4.0.1",
     "@coinmasters/types": "^4.0.2",
+    "@coinmasters/wallet-evm-extensions": "^4.0.1",
     "@coinmasters/wallet-keepkey": "^6.0.3",
     "@coinmasters/wallet-keplr": "^4.0.1",
     "@coinmasters/wallet-keystore": "^4.0.1",
@@ -43,9 +48,10 @@
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@fontsource/plus-jakarta-sans": "^5.0.15",
     "@pioneer-platform/pioneer-coins": "^9.0.4",
-    "@pioneer-sdk/pioneer-react": "0.0.35",
+    "@pioneer-sdk/pioneer-react": "0.0.40",
     "@typescript-eslint/parser": "^6.7.5",
     "buffer": "^6.0.3",
+    "dotenv": "^16.3.1",
     "eslint-plugin-prettier": "4.2.1",
     "events": "^3.3.0",
     "framer-motion": "^10.16.4",
