--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "pnpm": "pnpm i",
     "dev": "vite",
-    "build": "pnpm type-check && vite build",
-    "build:turbo": "npx turbo build",
+    "build": "pnpm type-check && NODE_OPTIONS=--max_old_space_size=17000 vite build",
+    "build:turbo": "NODE_OPTIONS=--max_old_space_size=17000 npx turbo build",
     "build:serve": "pnpm build && pnpm serve",
     "serve": "vite preview",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix && pnpm format",
-    "type-check": "tsc",
+    "type-check": "NODE_OPTIONS=--max_old_space_size=17000 tsc",
     "check:turbo": "npx turbo lint type-check",
     "format": "prettier --write src",
     "up-interactive": "pnpm up -i",
@@ -48,7 +48,7 @@
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@fontsource/plus-jakarta-sans": "^5.0.15",
     "@pioneer-platform/pioneer-coins": "^9.0.4",
-    "@pioneer-sdk/pioneer-react": "0.0.40",
+    "@pioneer-sdk/pioneer-react": "0.0.47",
     "@typescript-eslint/parser": "^6.7.5",
     "buffer": "^6.0.3",
     "dotenv": "^16.3.1",
