remove node memory crap

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "pnpm": "pnpm i",
     "dev": "vite",
-    "build": "pnpm type-check && NODE_OPTIONS=--max_old_space_size=17000 vite build",
-    "build:turbo": "NODE_OPTIONS=--max_old_space_size=17000 npx turbo build",
+    "build": "pnpm type-check && vite build",
+    "build:turbo": "npx turbo build",
     "build:serve": "pnpm build && pnpm serve",
     "serve": "vite preview",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix && pnpm format",
-    "type-check": "NODE_OPTIONS=--max_old_space_size=17000 tsc",
+    "type-check": "tsc",
     "check:turbo": "npx turbo lint type-check",
     "format": "prettier --write src",
     "up-interactive": "pnpm up -i",
