--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "pnpm": "pnpm i",
     "dev": "vite",
-    "build": "pnpm type-check && vite build",
+    "build": "pnpm type-check && npx turbo build",
     "build:turbo": "npx turbo build",
     "build:serve": "pnpm build && pnpm serve",
     "serve": "vite preview",
