--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "pnpm": "pnpm i",
     "dev": "vite",
-    "build": "pnpm type-check && npx turbo build",
-    "build:turbo": "npx turbo build",
+    "build": "NODE_OPTIONS=--max_old_space_size=8192 tsc && NODE_OPTIONS=--max_old_space_size=8192 vite build",
+    "build:turbo": "NODE_OPTIONS=--max_old_space_size=7000 npx turbo build",
     "build:serve": "pnpm build && pnpm serve",
     "serve": "vite preview",
     "lint": "eslint src",
@@ -23,25 +23,25 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
-    "@coinmasters/api": "^3.0.3",
-    "@coinmasters/core": "^4.0.4",
-    "@coinmasters/helpers": "4.0.2",
-    "@coinmasters/pioneer-sdk": "^4.0.6",
-    "@coinmasters/tokens": "3.0.1",
-    "@coinmasters/toolbox-cosmos": "4.0.4",
-    "@coinmasters/toolbox-evm": "4.0.4",
-    "@coinmasters/toolbox-utxo": "4.0.4",
-    "@coinmasters/types": "^4.0.2",
-    "@coinmasters/wallet-evm-extensions": "^4.0.1",
-    "@coinmasters/wallet-keepkey": "^6.0.3",
-    "@coinmasters/wallet-keplr": "^4.0.1",
-    "@coinmasters/wallet-keystore": "^4.0.1",
-    "@coinmasters/wallet-ledger": "^4.0.4",
-    "@coinmasters/wallet-metamask": "^3.0.0",
-    "@coinmasters/wallet-okx": "^4.0.1",
-    "@coinmasters/wallet-trezor": "^4.0.2",
-    "@coinmasters/wallet-wc": "^4.0.5",
-    "@coinmasters/wallet-xdefi": "^4.0.2",
+    "@coinmasters/api": "latest",
+    "@coinmasters/core": "latest",
+    "@coinmasters/helpers": "latest",
+    "@coinmasters/pioneer-sdk": "latest",
+    "@coinmasters/tokens": "latest",
+    "@coinmasters/toolbox-cosmos": "latest",
+    "@coinmasters/toolbox-evm": "latest",
+    "@coinmasters/toolbox-utxo": "latest",
+    "@coinmasters/types": "latest",
+    "@coinmasters/wallet-evm-extensions": "latest",
+    "@coinmasters/wallet-keepkey": "latest",
+    "@coinmasters/wallet-keplr": "latest",
+    "@coinmasters/wallet-keystore": "latest",
+    "@coinmasters/wallet-ledger": "latest",
+    "@coinmasters/wallet-metamask": "latest",
+    "@coinmasters/wallet-okx": "latest",
+    "@coinmasters/wallet-trezor": "latest",
+    "@coinmasters/wallet-wc": "latest",
+    "@coinmasters/wallet-xdefi": "latest",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
