--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "pnpm": "pnpm i",
     "dev": "vite",
-    "build": "NODE_OPTIONS=--max_old_space_size=28192 tsc && NODE_OPTIONS=--max_old_space_size=28192 npx turbo build",
-    "build:turbo": "NODE_OPTIONS=--max_old_space_size=7000 npx turbo build",
+    "build": "tsc && NODE_OPTIONS=--max_old_space_size=17000 vite build",
+    "build:turbo": "npx turbo build",
     "build:serve": "pnpm build && pnpm serve",
     "serve": "vite preview",
     "lint": "eslint src",
@@ -23,14 +23,6 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
-    "@coinmasters/api": "latest",
-    "@coinmasters/core": "latest",
-    "@coinmasters/helpers": "latest",
-    "@coinmasters/pioneer-sdk": "latest",
-    "@coinmasters/tokens": "latest",
-    "@coinmasters/toolbox-cosmos": "latest",
-    "@coinmasters/toolbox-evm": "latest",
-    "@coinmasters/toolbox-utxo": "latest",
     "@coinmasters/types": "latest",
     "@coinmasters/wallet-evm-extensions": "latest",
     "@coinmasters/wallet-keepkey": "latest",
