--- a/package.json
+++ b/package.json
@@ -23,6 +23,14 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
+    "@coinmasters/api": "latest",
+    "@coinmasters/core": "latest",
+    "@coinmasters/helpers": "latest",
+    "@coinmasters/pioneer-sdk": "latest",
+    "@coinmasters/tokens": "latest",
+    "@coinmasters/toolbox-cosmos": "latest",
+    "@coinmasters/toolbox-evm": "latest",
+    "@coinmasters/toolbox-utxo": "latest",
     "@coinmasters/types": "latest",
     "@coinmasters/wallet-evm-extensions": "latest",
     "@coinmasters/wallet-keepkey": "latest",
